pro-ui/src/app/pages/announcements/add-announcement-dialog.component.css
.full-width {
  width: 100%;
  margin-top: 20px;
}

mat-dialog-content {
  max-height: 100vh;
  overflow-y: auto;
}
::ng-deep .mat-mdc-dialog-surface {
  width: 70vh !important;
}

.author-container {
  display: flex;
  align-items: center;
  gap: 10px;
  margin-top: 20px;
}

.author-width {
  flex: 1;
}

.display-author-checkbox {
  margin-top: 5px;
}
.date-container {
  display: flex;
  justify-content: space-between;
  gap: 10px;
  margin-top: 20px;
}

.date-width {
  flex: 1;
}
.drop-down {
  width: 100%;
  margin-top: 20px;
}
.form-container {
  display: flex;
  gap: 20px;
  align-items: center;
}

.title-width {
  width: 90%;
}

.icon-width {
  width: 10%;
}

.add-announcement-dialog {
  width: 100%;
}

.editor-container {
  margin-top: 10px;
  border: 1px solid #ccc;
  min-height: 200px;
  border-radius: 5px;
}
.ql-container.ql-snow {
  border-top: 0;
  height: 170px;
}
.full-width-button {
  width: 100%;
  margin-top: 20px;
}
/* ::ng-deep .mat-mdc-text-field-wrapper {
  height: 40px !important;
} */

::ng-deep .emoji-picker__wrapper {
  z-index: 2000 !important;
}
.mat-mdc-checkbox-checked {
  --mdc-checkbox-selected-focus-icon-color: #0680cd;
  --mdc-checkbox-selected-hover-icon-color: #0680cd;
  --mdc-checkbox-selected-pressed-icon-color: #0680cd;
  --mdc-checkbox-selected-icon-color: #0680cd;
}

.mat-mdc-checkbox {
  --mdc-checkbox-unselected-hover-icon-color: #0680cd;
  --mdc-checkbox-unselected-focus-icon-color: #0680cd;
  --mdc-checkbox-unselected-pressed-icon-color: #0680cd;
  --mdc-checkbox-unselected-icon-color: #0680cd;
}

.mat-mdc-checkbox-checked .mdc-checkbox__checkmark {
  color: #0680cd !important;
}

.mat-mdc-checkbox-checked .mdc-checkbox__background {
  background-color: #0680cd !important;
  border-color: #0680cd !important;
}

.mat-mdc-checkbox .mdc-checkbox__background {
  border-color: #0680cd !important;
}
.mat-icon {
  height: 40px !important;
  width: 40px !important;
}

::ng-deep .mdc-checkbox__ripple {
  top: unset !important;
  left: unset !important;
  right: unset !important;
  bottom: unset !important;
  position: unset !important;
  border-radius: unset !important;
  pointer-events: unset !important;
}
::ng-deep .mat-mdc-dialog-surface {
  border: 3px solid #0680cd !important;
}

